--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sci-calc",
   "description": "Command-line cientific calculator based on node REPL, with the possibility to declare functions and variables, and save them and load them. This command-line calculator possesses a permanent history.",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "homepage": "https://github.com/qnp/sci-calc",
   "author": {
     "name": "François Risoud",
@@ -27,10 +27,10 @@
   "scripts": {
     "test": "grunt nodeunit"
   },
-  "devDependencies": {
+  "dependencies": {
     "colors": "~0.6.2" 
   },
-  "keywords": [],
+  "keywords": ["math", "calculator", "scientific", "command-line", "history", "variables", "functions"],
 	"preferGlobal": "true",
   "bin": {
     "sc" : "lib/sci-calc.js"
